# rotoforgeslicer

./: .gitignore  CLAUDE.md  README.md  ROADMAP_ADDENDUM.md  context.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
config/: machine_duet3.yaml
docs/: CONSTRAINT_MODEL_CORRECTION.md  DECISIONS.md  PROGRESS.md  USER_MANUAL.md  fram_rim_jet_process_window_screener.html  rotoforge_slicer_SPEC.md
packaging/: build_linux.sh  build_windows.bat  launch_gui.py  rotoforge_slicer.spec
packaging/hooks/: README.md
rotoforge_slicer/: __init__.py  cli.py  config.py  pipeline.py  presets.py
rotoforge_slicer/emit/: __init__.py  rrf.py  templates.py
rotoforge_slicer/fill/: __init__.py  contour.py  curvature.py  heading.py  raster.py  streamline.py  wedge.py
rotoforge_slicer/geometry/: __init__.py  backend.py  meshlib_backend.py  slicing.py  trimesh_backend.py
rotoforge_slicer/gui/: __init__.py  app.py  model.py  preview.py  widgets.py
rotoforge_slicer/process/: __init__.py  extrusion.py  screener.py
tests/: test_arrange.py  test_autoheading.py  test_collision.py  test_config.py  test_contour.py  test_curvature.py  test_emit.py  test_emit_curved.py  test_emit_m2.py  test_emit_m3.py  test_extrusion.py  test_gui.py  test_lazy_imports.py  test_packaging.py  test_passplan.py  test_presets.py  test_preview.py  test_project.py  test_raster.py  test_scene.py  test_screener.py  test_screener_gui.py  test_seam.py  test_segments.py  test_simulate.py  test_slicing.py  test_statemachine.py  test_streamline.py  test_studio.py  test_wedge.py
(+19 files in other folders)
